# thinking-in-biological-systems

./: .gitignore  README.md  pyproject.toml
src/tibs.egg-info/: SOURCES.txt
tests/: test_smoke.py
