[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tibs"
version = "0.1.0"
description = "Computational tools for exploring dynamical regimes in biological systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


